force-app/main/default/objects/Late_registration__c/Late_registration__c.object-meta.xml
<CustomObject>
    <label>Late registration</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>System number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>