force-app/main/default/objects/Late_registration__c/fields/Israeli_ID_number__c.field-meta.xml
<CustomField>
    <fullName>Israeli_ID_number__c</fullName>
    <formula>Main_contact__r.Israeli_ID_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Israeli ID number</label>
    <type>Text</type>
</CustomField>