force-app/main/default/objects/Late_registration__c/fields/Main_contact__c.field-meta.xml
<CustomField>
    <fullName>Main_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Late registrations</relationshipLabel>
    <relationshipName>Late_registrations_Main_contact</relationshipName>
    <type>Lookup</type>
</CustomField>